Fixed exercise added message. Changed the z-index and position. Fixed saved workout data/local storage data issue. Added some logic to check if saved data was emtpy. Small edits needed still to keep consistency with days correct, as switching days from an unsaved day to a saved day and then back again will make the user lose the unsaved data.

--- a/fitnessjournal/src/index.css
+++ b/fitnessjournal/src/index.css
@@ -1734,10 +1734,12 @@ footer {
 
 .set-added-modal {
   position: fixed;
-  background: rgb(220, 104, 75);
+  z-index: 100;
+  background: rgb(0, 0, 0);
+  opacity: .5;
   padding: .5rem;
   color: black;
-  bottom: 10px;
+  bottom: 84px;
   right: 0;
   left: 0;
 }
